# opengl-starter

./: CMakeLists.txt  README.md  draw.cpp  draw.h  glad.c  main.cpp  shader.cpp  shader.h  stb_image.h
shaders/: simple.frag.glsl  simple.vert.glsl
